--- a/Home/home.html
+++ b/Home/home.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg navbar-light pt-3 pb-3">
             <div class="container-fluid px-0">
                 <div class="row w-100">
-                    <div class="col-xl-8 col-lg-8 col-md-8 col-2">
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-2 pt-2">
                         <button class="navbar-toggler ml-2" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -78,10 +78,10 @@
 
         <!-- -------heading container - start -->
         <div class="container-fluid">
-            <div class="row py-3">
+            <div class="row py-3 px-xl-5">
                 <div class="col-5 pt-4">
-                    <h3 class="">Hallo, Ahmad</h3>
-                    <p class="">Find a player for your team.</p>
+                    <h1 class="">Hallo, Ahmad</h1>
+                    <h4 class="">Find a player for your team.</h4>
                     <h4 class="fg_green-s">Thursday, 24 December 2020</h4>
                 </div>
                 <div class="col-xl-5 col-lg-5 col-md-5 offset-xl-2 offset-lg-2 offset-md-1">
@@ -124,7 +124,7 @@
         <!-- .................Home Page Button Group Section End ......................... -->
         <!-- container for list of players - start -->
         <div class="container-fluid bg-white br_47px-s">
-            <div class="row py-5">
+            <div class="row py-5 px-xl-5">
                 <div class="col-12 min_h_340px-s py-3">
                     <div class="row">
                         <div class="col-12 text-left py-2">
