--- a/favorite_player.html
+++ b/favorite_player.html
@@ -22,15 +22,15 @@
     <div class="container-fluid px-0 mx-0 ">
         <!-- .................Home Page NavBar Start ......................... -->
 
-        <nav class="navbar navbar-expand-md navbar-light pt-5 pb-3">
+        <nav class="navbar navbar-expand-lg navbar-light pt-3 pb-3">
             <div class="container-fluid px-0">
                 <div class="row w-100">
-                    <div class="col-xl-8 col-lg-8 col-md-8 col-2">
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-2 pt-2">
                         <button class="navbar-toggler ml-2" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around">
                                 <li class="nav-item ml-2">
                                     <a class="nav-link" href="Home/home.html">
                                         <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
@@ -63,12 +63,12 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right">
                         <div class="">
-                            <a>
+                            <a class="pr-3">
                                 <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
                                 <span> Adailiya </span>
                             </a>
-                            <img src="assets/images/Group 24.png" class="img-fluid nav_profile" alt="Navbar_profile" />
-                            <img src="assets/images/notification.svg" class="img-fluid nav_notification_img" alt="navbar_home" />
+                            <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
+                            <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                         </div>
                     </div>
                 </div>
@@ -78,10 +78,10 @@
 
         <!-- -------heading container - start -->
         <div class="container-fluid">
-            <div class="row py-3">
+            <div class="row py-3 px-xl-5">
                 <div class="col-12 pt-4">
-                    <h1 class="ft_3rem-s">Favorites</h1>
-                    <p class="ft_2rem-s">All your favorite players.</p>
+                    <h1 class="">Favorites</h1>
+                    <h4 class="">All your favorite players.</h4>
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
 
         <!-- container for favorite players - start -->
         <div class="container-fluid bg-white mt-5 br_47px-s">
-            <div class="row py-5">
+            <div class="row py-5 px-xl-5">
                 <div class="col-12 min_h_340px-s py-3">
                     <div class="row">
                         <div class="col-12 text-left py-2">
